[gd_scene load_steps=3 format=3 uid="uid://d27ubpvnas47p"]

[ext_resource type="Script" path="res://EnemyTemplate.gd" id="1_u51uj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vj5pl"]
bg_color = Color(0.72549, 0, 0.129412, 1)

[node name="EnemyTemplate" type="CharacterBody2D"]
script = ExtResource("1_u51uj")

[node name="Sprite" type="AnimatedSprite2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="VisionArea" type="Area2D" parent="."]

[node name="VisionAreaShape" type="CollisionShape2D" parent="VisionArea"]

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_vj5pl")
fill_mode = 1
show_percentage = false

[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]
